# Packager

./: .coveragerc  .gitignore  .pylintrc  ABOUT.rst  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  MANIFEST.in  Makefile  README.rst  documentation.url  make.bat  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-freeze.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: tox_matrix.yml
ci/docker/deploy/devpi/test/windows/: Dockerfile
ci/docker/pytest_tests/: Dockerfile
ci/docker/python/linux/: Dockerfile
ci/docker/python/linux/jenkins/: Dockerfile
ci/docker/python/linux/tox/: Dockerfile  apt-packages.txt
ci/docker/python/shared/: requirements-ci.txt  requirements-extra.txt
ci/docker/python/windows/: Dockerfile
ci/docker/python/windows/jenkins/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
ci/docker/python/windows/tox/chocolatey/: packages.xml
ci/jenkins/jenkinsfile-runner/: Dockerfile  plugins.yaml
ci/jenkins/jenkinsfile-runner/casc/: jenkins.yml
ci/jenkins/scripts/: devpi.groovy  packaging.groovy  tox.groovy
cmake/: ci.cmake.in  jenkins.cmake  python_targets.cmake
docs/source/: about.rst  conf.py  contents.rst  index.rst  installSourceCLI.rst  packager.rst  requirements.rst  usage.rst
features/: environment.py  package_factory.feature
features/steps/: package_factory.py
packager/: __init__.py  __main__.py  package.py
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt  requirements-extra.txt
src/uiucprescon/packager/: common.py  package.py  transformations.py
tests/: conftest.py  package_names.csv  test_CapOne.py  test_CapOne2Hathi.py  test_archival_collection.py  test_basic.py  test_brittle_books.py  test_collection.py  test_digital_library_compound.py  test_eas_collection.py  test_hathi_jp2_package.py  test_hathi_limited_view.py  test_non_eas_collection.py  test_transformations.py
tests/features/: package_factory.feature  package_transform.feature
tests/steps/: test_package_factory_feature.py  test_package_transform.py
uiucprescon/packager/: __init__.py  common.py  errors.py  package.py  transformations.py  utils.py
vars/: runJenkinsPipeline.groovy
