[metadata]
name = uiucprescon-packager
version = 0.1.0
url = http://www.library.illinois.edu/dccdocs/packager
download_url = https://github.com/UIUCLibrary/packager
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Packager tools for DS library
long_description = file: ABOUT.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Topic :: System :: Archiving :: Packaging

[tool:pytest]
testpaths = tests
addopts = --verbose -s
norecursedirs = features build

[mypy]
ignore_missing_imports = True

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
