[metadata]
name = uiucprescon-packager
version = 0.2.8
url = http://www.library.illinois.edu/dccdocs/packager
download_url = https://github.com/UIUCLibrary/packager
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Packager tools for DS library
long_description = file: ABOUT.rst
license = University of Illinois/NCSA Open Source License
license_file = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Topic :: System :: Archiving :: Packaging

[tool:pytest]
testpaths = tests
addopts = --verbose -s
norecursedirs = features build

[mypy]
ignore_missing_imports = True

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = build/docs
all_files  = 1
