[metadata]
name = uiucprescon.packager
version = 0.2.15b2
url = http://www.library.illinois.edu/dccdocs/packager
download_url = https://github.com/UIUCLibrary/packager
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Packager tools for DS library
long_description = file: ABOUT.rst
license = University of Illinois/NCSA Open Source License
license_file = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Topic :: System :: Archiving :: Packaging

[options]
python_requires = >= 3.7
zip_safe = False


[mypy]
ignore_missing_imports = True

[aliases]
test=pytest

[build_sphinx]
source_dir = docs/source
build_dir  = build/docs
all_files  = 1
